lightmetal chat provider added